<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>CRUDGerenteWidget</class>
 <widget class="QWidget" name="CRUDGerenteWidget">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>1716</width>
    <height>1278</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>CRUD</string>
  </property>
  <layout class="QGridLayout" name="gridLayout">
   <item row="0" column="0">
    <widget class="QStackedWidget" name="stackedWidget">
     <widget class="QWidget" name="page">
      <layout class="QGridLayout" name="gridLayout_2">
       <item row="0" column="0">
        <widget class="QTabWidget" name="tabWidget">
         <property name="currentIndex">
          <number>1</number>
         </property>
         <widget class="QWidget" name="JefeMeseros">
          <attribute name="title">
           <string>JefeMeseros</string>
          </attribute>
          <layout class="QGridLayout" name="gridLayout_3">
           <item row="0" column="0">
            <widget class="QGroupBox" name="GBJefeMeseros">
             <property name="title">
              <string>CRUD JEFE DE MESEROS</string>
             </property>
             <property name="alignment">
              <set>Qt::AlignCenter</set>
             </property>
             <layout class="QGridLayout" name="gridLayout_4">
              <item row="13" column="2">
               <widget class="QPushButton" name="PBGuardarJefe">
                <property name="enabled">
                 <bool>false</bool>
                </property>
                <property name="maximumSize">
                 <size>
                  <width>200</width>
                  <height>30</height>
                 </size>
                </property>
                <property name="text">
                 <string>Guardar</string>
                </property>
               </widget>
              </item>
              <item row="13" column="6">
               <widget class="QPushButton" name="PBEliminarJefe">
                <property name="enabled">
                 <bool>false</bool>
                </property>
                <property name="maximumSize">
                 <size>
                  <width>200</width>
                  <height>30</height>
                 </size>
                </property>
                <property name="text">
                 <string>Eliminar</string>
                </property>
               </widget>
              </item>
              <item row="12" column="0">
               <widget class="QLineEdit" name="LETelefonoJefe">
                <property name="enabled">
                 <bool>false</bool>
                </property>
                <property name="maximumSize">
                 <size>
                  <width>200</width>
                  <height>30</height>
                 </size>
                </property>
                <property name="placeholderText">
                 <string>1234567890</string>
                </property>
               </widget>
              </item>
              <item row="13" column="1">
               <widget class="QPushButton" name="PBNuevoJefe">
                <property name="maximumSize">
                 <size>
                  <width>200</width>
                  <height>30</height>
                 </size>
                </property>
                <property name="text">
                 <string>Nuevo</string>
                </property>
               </widget>
              </item>
              <item row="13" column="3">
               <widget class="QPushButton" name="PBCancelarJefe">
                <property name="enabled">
                 <bool>false</bool>
                </property>
                <property name="maximumSize">
                 <size>
                  <width>200</width>
                  <height>30</height>
                 </size>
                </property>
                <property name="text">
                 <string>Cancelar</string>
                </property>
               </widget>
              </item>
              <item row="9" column="0">
               <widget class="QLabel" name="lblFechaJefe">
                <property name="maximumSize">
                 <size>
                  <width>150</width>
                  <height>30</height>
                 </size>
                </property>
                <property name="text">
                 <string>Fecha de nacimiento:</string>
                </property>
               </widget>
              </item>
              <item row="1" column="0">
               <widget class="QLabel" name="lblIDJefe">
                <property name="minimumSize">
                 <size>
                  <width>0</width>
                  <height>0</height>
                 </size>
                </property>
                <property name="maximumSize">
                 <size>
                  <width>100</width>
                  <height>30</height>
                 </size>
                </property>
                <property name="text">
                 <string>ID:</string>
                </property>
               </widget>
              </item>
              <item row="0" column="0">
               <widget class="QLineEdit" name="LEBuscarJefe">
                <property name="maximumSize">
                 <size>
                  <width>500</width>
                  <height>30</height>
                 </size>
                </property>
                <property name="placeholderText">
                 <string>Identificador</string>
                </property>
               </widget>
              </item>
              <item row="3" column="0">
               <widget class="QLabel" name="lblNombresJefe">
                <property name="maximumSize">
                 <size>
                  <width>100</width>
                  <height>30</height>
                 </size>
                </property>
                <property name="text">
                 <string>Nombre (s):</string>
                </property>
               </widget>
              </item>
              <item row="4" column="0">
               <widget class="QLineEdit" name="LENombresJefe">
                <property name="enabled">
                 <bool>false</bool>
                </property>
                <property name="maximumSize">
                 <size>
                  <width>200</width>
                  <height>30</height>
                 </size>
                </property>
                <property name="placeholderText">
                 <string>Nombres</string>
                </property>
               </widget>
              </item>
              <item row="13" column="5">
               <widget class="QPushButton" name="PBEditarJefe">
                <property name="enabled">
                 <bool>false</bool>
                </property>
                <property name="maximumSize">
                 <size>
                  <width>200</width>
                  <height>30</height>
                 </size>
                </property>
                <property name="text">
                 <string>Editar</string>
                </property>
               </widget>
              </item>
              <item row="8" column="0">
               <widget class="QLineEdit" name="LEApellidoMJefe">
                <property name="enabled">
                 <bool>false</bool>
                </property>
                <property name="maximumSize">
                 <size>
                  <width>200</width>
                  <height>30</height>
                 </size>
                </property>
                <property name="placeholderText">
                 <string>Apellido Materno</string>
                </property>
               </widget>
              </item>
              <item row="7" column="0">
               <widget class="QLabel" name="lblApellidoMJefe">
                <property name="maximumSize">
                 <size>
                  <width>100</width>
                  <height>30</height>
                 </size>
                </property>
                <property name="text">
                 <string>Apellido Materno:</string>
                </property>
               </widget>
              </item>
              <item row="0" column="1">
               <widget class="QPushButton" name="PBBuscarJefe">
                <property name="enabled">
                 <bool>false</bool>
                </property>
                <property name="maximumSize">
                 <size>
                  <width>200</width>
                  <height>30</height>
                 </size>
                </property>
                <property name="text">
                 <string>Buscar</string>
                </property>
               </widget>
              </item>
              <item row="11" column="0">
               <widget class="QLabel" name="lblTelefonoJefe">
                <property name="maximumSize">
                 <size>
                  <width>100</width>
                  <height>30</height>
                 </size>
                </property>
                <property name="text">
                 <string>Tel√©fono:</string>
                </property>
               </widget>
              </item>
              <item row="6" column="0">
               <widget class="QLineEdit" name="LEApellidoPJefe">
                <property name="enabled">
                 <bool>false</bool>
                </property>
                <property name="maximumSize">
                 <size>
                  <width>200</width>
                  <height>30</height>
                 </size>
                </property>
                <property name="placeholderText">
                 <string>Apellido Paterno</string>
                </property>
               </widget>
              </item>
              <item row="10" column="0">
               <widget class="QLineEdit" name="LEFechaJefe">
                <property name="enabled">
                 <bool>false</bool>
                </property>
                <property name="maximumSize">
                 <size>
                  <width>200</width>
                  <height>30</height>
                 </size>
                </property>
                <property name="placeholderText">
                 <string>YYYY-MM-DD</string>
                </property>
               </widget>
              </item>
              <item row="5" column="0">
               <widget class="QLabel" name="lblApellidoPJefe">
                <property name="maximumSize">
                 <size>
                  <width>100</width>
                  <height>30</height>
                 </size>
                </property>
                <property name="text">
                 <string>Apellido Paterno:</string>
                </property>
               </widget>
              </item>
              <item row="2" column="0">
               <widget class="QLineEdit" name="LEIDJefe">
                <property name="enabled">
                 <bool>false</bool>
                </property>
                <property name="maximumSize">
                 <size>
                  <width>200</width>
                  <height>30</height>
                 </size>
                </property>
                <property name="placeholderText">
                 <string>ID</string>
                </property>
               </widget>
              </item>
             </layout>
            </widget>
           </item>
          </layout>
         </widget>
         <widget class="QWidget" name="Platillos">
          <attribute name="title">
           <string>Platillos</string>
          </attribute>
          <layout class="QGridLayout" name="gridLayout_5">
           <item row="0" column="0">
            <widget class="QGroupBox" name="GBPlatillos">
             <property name="title">
              <string>CRUD Platillos</string>
             </property>
             <property name="alignment">
              <set>Qt::AlignCenter</set>
             </property>
             <layout class="QGridLayout" name="gridLayout_6">
              <item row="2" column="0">
               <widget class="QLineEdit" name="LEIDPlatillos">
                <property name="enabled">
                 <bool>false</bool>
                </property>
                <property name="maximumSize">
                 <size>
                  <width>200</width>
                  <height>30</height>
                 </size>
                </property>
                <property name="placeholderText">
                 <string>ID</string>
                </property>
               </widget>
              </item>
              <item row="3" column="0">
               <widget class="QLabel" name="lblNombrePlatillo">
                <property name="maximumSize">
                 <size>
                  <width>100</width>
                  <height>30</height>
                 </size>
                </property>
                <property name="text">
                 <string>Nombre:</string>
                </property>
               </widget>
              </item>
              <item row="0" column="4">
               <widget class="QLineEdit" name="LEBuscarPlatillos">
                <property name="enabled">
                 <bool>true</bool>
                </property>
                <property name="maximumSize">
                 <size>
                  <width>500</width>
                  <height>30</height>
                 </size>
                </property>
                <property name="placeholderText">
                 <string>ID</string>
                </property>
               </widget>
              </item>
              <item row="1" column="0">
               <widget class="QLabel" name="lblIDPlatillo">
                <property name="maximumSize">
                 <size>
                  <width>100</width>
                  <height>30</height>
                 </size>
                </property>
                <property name="text">
                 <string>ID:</string>
                </property>
               </widget>
              </item>
              <item row="5" column="0">
               <widget class="QLabel" name="lblPrecioPlatillos">
                <property name="maximumSize">
                 <size>
                  <width>100</width>
                  <height>30</height>
                 </size>
                </property>
                <property name="text">
                 <string>Precio:</string>
                </property>
               </widget>
              </item>
              <item row="8" column="0">
               <widget class="QPlainTextEdit" name="PTEDescripcionPlatillo">
                <property name="enabled">
                 <bool>false</bool>
                </property>
                <property name="maximumSize">
                 <size>
                  <width>300</width>
                  <height>150</height>
                 </size>
                </property>
               </widget>
              </item>
              <item row="0" column="5">
               <widget class="QPushButton" name="PBBuscarPlatillos">
                <property name="enabled">
                 <bool>false</bool>
                </property>
                <property name="maximumSize">
                 <size>
                  <width>200</width>
                  <height>30</height>
                 </size>
                </property>
                <property name="text">
                 <string>Buscar</string>
                </property>
               </widget>
              </item>
              <item row="7" column="0">
               <widget class="QLabel" name="lblDescripcionPlatillo">
                <property name="maximumSize">
                 <size>
                  <width>100</width>
                  <height>30</height>
                 </size>
                </property>
                <property name="text">
                 <string>Descripci√≥n:</string>
                </property>
               </widget>
              </item>
              <item row="9" column="0">
               <widget class="QLabel" name="lblIMGPlatillos">
                <property name="maximumSize">
                 <size>
                  <width>100</width>
                  <height>30</height>
                 </size>
                </property>
                <property name="text">
                 <string>Imagen:</string>
                </property>
               </widget>
              </item>
              <item row="4" column="0">
               <widget class="QLineEdit" name="LENombrePlatillos">
                <property name="enabled">
                 <bool>false</bool>
                </property>
                <property name="maximumSize">
                 <size>
                  <width>200</width>
                  <height>30</height>
                 </size>
                </property>
                <property name="placeholderText">
                 <string>Nombre</string>
                </property>
               </widget>
              </item>
              <item row="6" column="0">
               <widget class="QLineEdit" name="LEPrecioPlatillos">
                <property name="enabled">
                 <bool>false</bool>
                </property>
                <property name="maximumSize">
                 <size>
                  <width>200</width>
                  <height>30</height>
                 </size>
                </property>
                <property name="placeholderText">
                 <string>Precio</string>
                </property>
               </widget>
              </item>
              <item row="10" column="0">
               <widget class="QPushButton" name="PBIMGPlatillos">
                <property name="enabled">
                 <bool>false</bool>
                </property>
                <property name="maximumSize">
                 <size>
                  <width>200</width>
                  <height>30</height>
                 </size>
                </property>
                <property name="text">
                 <string>Cargar Imagen</string>
                </property>
               </widget>
              </item>
              <item row="10" column="5">
               <widget class="QPushButton" name="PBNuevoPlatillos">
                <property name="maximumSize">
                 <size>
                  <width>200</width>
                  <height>30</height>
                 </size>
                </property>
                <property name="text">
                 <string>Nuevo</string>
                </property>
               </widget>
              </item>
              <item row="10" column="6">
               <widget class="QPushButton" name="PBGuardarPlatillos">
                <property name="enabled">
                 <bool>false</bool>
                </property>
                <property name="maximumSize">
                 <size>
                  <width>200</width>
                  <height>30</height>
                 </size>
                </property>
                <property name="text">
                 <string>Guardar</string>
                </property>
               </widget>
              </item>
              <item row="10" column="7">
               <widget class="QPushButton" name="PBCancelarPlatillos">
                <property name="enabled">
                 <bool>false</bool>
                </property>
                <property name="maximumSize">
                 <size>
                  <width>200</width>
                  <height>30</height>
                 </size>
                </property>
                <property name="text">
                 <string>Cancelar</string>
                </property>
               </widget>
              </item>
              <item row="10" column="8">
               <widget class="QPushButton" name="PBEditarPlatillos">
                <property name="enabled">
                 <bool>false</bool>
                </property>
                <property name="maximumSize">
                 <size>
                  <width>200</width>
                  <height>30</height>
                 </size>
                </property>
                <property name="text">
                 <string>Editar</string>
                </property>
               </widget>
              </item>
              <item row="10" column="9">
               <widget class="QPushButton" name="PBEliminarPlatillos">
                <property name="enabled">
                 <bool>false</bool>
                </property>
                <property name="maximumSize">
                 <size>
                  <width>200</width>
                  <height>30</height>
                 </size>
                </property>
                <property name="text">
                 <string>Eliminar</string>
                </property>
               </widget>
              </item>
             </layout>
            </widget>
           </item>
          </layout>
         </widget>
         <widget class="QWidget" name="Mesas">
          <attribute name="title">
           <string>Mesas</string>
          </attribute>
         </widget>
        </widget>
       </item>
      </layout>
     </widget>
     <widget class="QWidget" name="page_2"/>
    </widget>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections/>
</ui>
